syntax = "proto3";
option go_package = "./proto";

service OrderService {
  rpc GetOrder(GetOrderRequest) returns (OrderResponse) {};
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {};
  rpc UpdateOrder(UpdateOrderRequest) returns (OrderResponse) {};
  rpc DeleteOrder(DeleteOrderRequest) returns (SuccessResponse) {};
}

message OrderResponse {
  string id = 1;
  string order_id = 2;
  string name = 3;
  string description = 4;
  int32 price = 5;
}

message GetOrderRequest {
  string order_id = 1;
}

message CreateOrderRequest {
  string name = 1;
  string description = 2;
  int32 price = 3;
}

message UpdateOrderRequest {
  string order_id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
}

message DeleteOrderRequest {
  string order_id = 1;
}

message SuccessResponse {
  string message = 1;
}
